--- a/mosquitto.conf
+++ b/mosquitto.conf
@@ -3,7 +3,7 @@ listener 1883
 
 # Authentication configuration
 # Password file with the list of valid usernames and passwords
-password_file D:\passwrd\password.txt
+password_file D:\passwd\passwd.txt
 
 # Allow anonymous access (set to false to require authentication)
 allow_anonymous false
