--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,6 @@ django-bootstrap-v5==1.0.11
 paho-mqtt==2.1.0
 soupsieve==2.5
 sqlparse==0.5.1
+typing_extensions==4.12.2
 tzdata==2024.1
+whitenoise==6.7.0
