--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ beautifulsoup4==4.12.3
 Django==4.2.14
 django-bootstrap-v5==1.0.11
 paho-mqtt==2.1.0
+psycopg2-binary==2.9.9
+python-dotenv==1.0.1
 soupsieve==2.5
 sqlparse==0.5.1
 typing_extensions==4.12.2
